--- a/src/Electra.Events/Electra.Events.csproj
+++ b/src/Electra.Events/Electra.Events.csproj
@@ -7,9 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.5" />
+      <PackageReference Include="Marten" Version="8.13.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
       <PackageReference Include="SnowflakeGenerator" Version="2.0.0" />
-      <PackageReference Include="WolverineFx" Version="3.13.4" />
+      <PackageReference Include="WolverineFx" Version="4.12.2" />
     </ItemGroup>
 
 </Project>
