solnet submod refresh

--- a/src/Electra.Crypto.Solana/Electra.Crypto.Solana.csproj
+++ b/src/Electra.Crypto.Solana/Electra.Crypto.Solana.csproj
@@ -7,11 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Solana.Extensions" Version="8.5.0" />
-      <PackageReference Include="Solana.KeyStore" Version="8.5.0" />
-      <PackageReference Include="Solana.Programs" Version="8.5.0" />
-      <PackageReference Include="Solana.Rpc" Version="8.5.0" />
-      <PackageReference Include="Solana.Wallet" Version="8.5.0" />
+      <ProjectReference Include="D:\proj\microbians\Electra\Solnet\src\Solnet.Extensions\Solnet.Extensions.csproj" />
+      <ProjectReference Include="D:\proj\microbians\Electra\Solnet\src\Solnet.KeyStore\Solnet.KeyStore.csproj" />
+      <ProjectReference Include="D:\proj\microbians\Electra\Solnet\src\Solnet.Programs\Solnet.Programs.csproj" />
+      <ProjectReference Include="D:\proj\microbians\Electra\Solnet\src\Solnet.Rpc\Solnet.Rpc.csproj" />
+      <ProjectReference Include="D:\proj\microbians\Electra\Solnet\src\Solnet.Wallet\Solnet.Wallet.csproj" />
     </ItemGroup>
 
 </Project>
