--- a/src/Electra.Persistence/Electra.Persistence.csproj
+++ b/src/Electra.Persistence/Electra.Persistence.csproj
@@ -11,8 +11,6 @@
     <Compile Remove="MultipleResultSetWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="MultipleResultSetHelper.cs" />
-    <None Include="MultipleResultSetWrapper.cs" />
     <Compile Remove="ElectraIdentityServerContext.cs" />
     <None Include="ElectraIdentityServerContext.cs" />
   </ItemGroup>
@@ -24,6 +22,7 @@
     <PackageReference Include="Foundatio.Repositories.Elasticsearch" Version="7.17.17" />
     <PackageReference Include="LiteDB" Version="5.0.21" />
     <PackageReference Include="Marten" Version="8.13.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.9" />
     <PackageReference Include="NEST" Version="7.17.5" />
     <PackageReference Include="Npgsql" Version="9.0.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
@@ -64,5 +63,6 @@
     <ProjectReference Include="..\Electra.Core\Electra.Core.csproj" />
     <ProjectReference Include="..\Electra.Models\Electra.Models.csproj" />
     <ProjectReference Include="..\Electra.Common\Electra.Common.csproj" />
+    <ProjectReference Include="..\Electra.Persistence.Core\Electra.Persistence.Core.csproj" />
   </ItemGroup>
 </Project>
