--- a/src/Electra.Caching/Electra.Caching.csproj
+++ b/src/Electra.Caching/Electra.Caching.csproj
@@ -2,21 +2,13 @@
   <PropertyGroup>
     <Description>Electra caching utils</Description>
     <IsPackable>false</IsPackable>
-    <Title>Electra.Common.Caching</Title>
-    <RootNamespace>Electra.Common.Caching</RootNamespace>
+    <Title>Electra.Caching</Title>
+    <RootNamespace>Electra.Caching</RootNamespace>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Automatonymous" Version="5.1.3" />
     <PackageReference Include="DotNext" Version="5.25.1" />
-    <PackageReference Include="EasyCaching.Bus.Redis" Version="1.9.2" />
-    <PackageReference Include="EasyCaching.Core" Version="1.9.2" />
-    <PackageReference Include="EasyCaching.HybridCache" Version="1.9.2" />
-    <PackageReference Include="EasyCaching.InMemory" Version="1.9.2" />
-    <PackageReference Include="EasyCaching.Redis" Version="1.9.2" />
-    <PackageReference Include="EasyCaching.Serialization.SystemTextJson" Version="1.9.2" />
-    <PackageReference Include="Foundatio" Version="12.0.0" />
-    <PackageReference Include="Foundatio.Redis" Version="12.0.0" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.9.25" />
     <PackageReference Include="System.Reactive" Version="6.1.0" />
@@ -26,6 +18,8 @@
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
     <PackageReference Include="System.Text.Json" Version="9.0.9" />
+    <PackageReference Include="ZiggyCreatures.FusionCache" Version="2.4.0" />
+    <PackageReference Include="ZiggyCreatures.FusionCache.Backplane.StackExchangeRedis" Version="2.4.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Electra.Persistence\Electra.Persistence.csproj" />
