--- a/src/Electra.Persistence/Electra.Persistence.csproj
+++ b/src/Electra.Persistence/Electra.Persistence.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Foundatio" Version="12.0.0" />
     <PackageReference Include="Foundatio.Repositories" Version="7.17.17" />
     <PackageReference Include="Foundatio.Repositories.Elasticsearch" Version="7.17.17" />
+    <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
     <PackageReference Include="LiteDB" Version="5.0.21" />
     <PackageReference Include="Marten" Version="8.13.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.9" />
