prep for bff + yarp + identity

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -446,4 +446,17 @@ volumes:
 
 networks:
   appx:
-    driver: bridge
+    driver: bridgeservices:
+  electra.identity.server:
+    image: electra.identity.server
+    build:
+      context: .
+      dockerfile: Electra.Identity.Server/Electra.Identity.Server/Dockerfile
+
+services:
+  electra.identity.server.client:
+    image: electra.identity.server.client
+    build:
+      context: .
+      dockerfile: Electra.Identity.Server/Electra.Identity.Server.Client/Dockerfile
+
