--- a/src/Electra.Auth/Electra.Auth.csproj
+++ b/src/Electra.Auth/Electra.Auth.csproj
@@ -9,10 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="ChatAIze.Passkeys" Version="0.2.7" />
-    <PackageReference Include="DotNext" Version="5.25.1" />
-    <PackageReference Include="Fido2" Version="4.0.0" />
-    <PackageReference Include="Fido2.AspNet" Version="4.0.0" />
-    <PackageReference Include="Fido2.Models" Version="4.0.0" />
     <PackageReference Include="FluentAssertions" Version="8.7.1" />
     <PackageReference Include="FluentAssertions.Analyzers" Version="0.34.1">
       <PrivateAssets>all</PrivateAssets>
@@ -41,16 +37,29 @@
     <PackageReference Include="OpenIddict.Server" Version="7.1.0" />
     <PackageReference Include="OpenIddict.Server.AspNetCore" Version="7.1.0" />
     <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="7.1.0" />
-    <PackageReference Include="Passkeys" Version="1.0.0" />
     <PackageReference Include="SecretSharingDotNet" Version="0.12.0" />
     <PackageReference Include="SnowflakeGuid" Version="1.0.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
     <PackageReference Include="ThrowGuard" Version="1.1.0" />
+    <PackageReference Include="WebAuthn.Net" Version="1.3.4" />
+    <PackageReference Include="WebAuthn.Net.OpenTelemetry" Version="1.3.4" />
+    <PackageReference Include="WebAuthn.Net.Storage.InMemory" Version="1.3.4" />
+    <PackageReference Include="WebAuthn.Net.Storage.PostgreSql" Version="1.3.4" />
+    <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="C:\Users\bbqch\proj\microbians\Electra\src\Electra.Models\Electra.Models.csproj" />
     <ProjectReference Include="C:\Users\bbqch\proj\microbians\Electra\src\Electra.Web\Electra.Web.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Context\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="ElectraAuthDbContext.cs" />
+    <None Include="ElectraAuthDbContext.cs" />
   </ItemGroup>
 
 </Project>
