--- a/src/Electra.Auth/Electra.Auth.csproj
+++ b/src/Electra.Auth/Electra.Auth.csproj
@@ -1,10 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <Description>Electra Auth utils</Description>
+    <TargetFramework>net9.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Description>Electra Authentication Microservice</Description>
     <IsPackable>false</IsPackable>
     <Title>Electra.Auth</Title>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="FluentResults" Version="4.0.0" />
+    <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Core" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="9.0.9" />
@@ -46,16 +51,27 @@
     <PackageReference Include="WebAuthn.Net.Storage.InMemory" Version="1.3.4" />
     <PackageReference Include="WebAuthn.Net.Storage.PostgreSql" Version="1.3.4" />
     <PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.4" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="C:\Users\bbqch\proj\microbians\Electra\src\Electra.Models\Electra.Models.csproj" />
-    <ProjectReference Include="C:\Users\bbqch\proj\microbians\Electra\src\Electra.Web\Electra.Web.csproj" />
+    <ProjectReference Include="..\Electra.Models\Electra.Models.csproj" />
+    <ProjectReference Include="..\Electra.Persistence\Electra.Persistence.csproj" />
+    <ProjectReference Include="..\Electra.Core\Electra.Core.csproj" />
+    <ProjectReference Include="C:\Users\bbqch\proj\microbians\Electra\src\Electra.Web.Core\Electra.Web.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Remove="ElectraAuthDbContext.cs" />
-    <None Include="ElectraAuthDbContext.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Program.cs" />
+    <Compile Remove="Controllers\PasskeyController.cs" />
   </ItemGroup>
 
 </Project>
