--- a/src/Electra.Auth/Electra.Auth.csproj
+++ b/src/Electra.Auth/Electra.Auth.csproj
@@ -74,4 +74,8 @@
     <Compile Remove="Controllers\PasskeyController.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Abstractions\User\Models\" />
+  </ItemGroup>
+
 </Project>
