--- a/src/Electra.Auth.Tests/Electra.Auth.Tests.csproj
+++ b/src/Electra.Auth.Tests/Electra.Auth.Tests.csproj
@@ -14,6 +14,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.10" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
         <PackageReference Include="NSubstitute" Version="5.3.0" />
         <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.17">
@@ -26,6 +27,12 @@
 
     <ItemGroup>
         <Using Include="Xunit"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Electra.Auth.Tests.WebHost\Electra.Auth.Tests.WebHost.csproj" />
+      <ProjectReference Include="..\Electra.Web.Core\Electra.Web.Core.csproj" />
+      <ProjectReference Include="D:\proj\microbians\Electra\src\Electra.Auth\Electra.Auth.csproj" />
     </ItemGroup>
 
 </Project>
