--- a/src/Electra.Auth.Tests/Electra.Auth.Tests.csproj
+++ b/src/Electra.Auth.Tests/Electra.Auth.Tests.csproj
@@ -27,6 +27,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="WebAuthn.Net" Version="1.3.4" />
         <PackageReference Include="xunit" Version="2.9.2"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2"/>
     </ItemGroup>
