--- a/src/Electra.Auth.Tests/Electra.Auth.Tests.csproj
+++ b/src/Electra.Auth.Tests/Electra.Auth.Tests.csproj
@@ -39,7 +39,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Electra.Auth.Tests.WebHost\Electra.Auth.Tests.WebHost.csproj" />
       <ProjectReference Include="..\Electra.Web.Core\Electra.Web.Core.csproj" />
-      <ProjectReference Include="D:\proj\microbians\Electra\src\Electra.Auth\Electra.Auth.csproj" />
+      <ProjectReference Include="..\Electra.Auth\Electra.Auth.csproj" />
     </ItemGroup>
 
 </Project>
