--- a/src/Electra.Core.Tests/Electra.Core.Tests.csproj
+++ b/src/Electra.Core.Tests/Electra.Core.Tests.csproj
@@ -7,6 +7,7 @@
     <RootNamespace>Electra.Core.Tests</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="8.7.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="Z.ExtensionMethods" Version="2.1.1" />
